# STS3

./: .gitignore  README.md  pr-description.md
azure-deployment/: AZURE_VM_RECOMMENDATIONS.md  DEPLOYMENT_GUIDE.md  FINAL_RECOMMENDATIONS.md  README.md  SUMMARY.md  VM_SPECIFICATIONS.md  azure-credentials.md  deploy-with-credentials.sh  deploy.bicep  deploy.sh  deployment-info.json  performance-monitor.sh  production.env  quick-deploy.sh  requirements.txt  scale-vm.sh  setup-vm-robust.sh  setup-vm.sh  test-deployment.sh  update-frontend-urls.sh  vm-recommendations.md
deployment-package/: INSTALL.sh  README.txt  index.html
translation-backend/: .env  .env.example  debug_routes.py  fly.toml  pyproject.toml
translation-backend/app/: main.py
translation-frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
translation-frontend/src/: App.tsx
