[tool.poetry]
name = "translation-backend"
version = "0.1.0"
description = "Simultaneous Translation Backend with Deepgram STT, DeepL Translation, and Azure TTS"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
websockets = "^12.0"
python-dotenv = "^1.0.0"
deepgram-sdk = "^3.2.7"
deepl = "^1.17.0"
pyttsx3 = "^2.90"
requests = "^2.31.0"
azure-cognitiveservices-speech = "^1.34.0"
pydantic = "^2.5.0"
pydub = "^0.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
